--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -19,6 +19,13 @@
   cursor: pointer;
 }
 
+.button_inactive {
+  color: rgba(0, 0, 0, 1);
+  opacity: 20%;
+  background: inherit;
+  border: 1px solid rgba(0, 0, 0, 1);
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
