--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,11 +7,20 @@
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .popup__input:last-of-type {
   margin-bottom: 0;
+}
+
+.form__input_type_error {
+  border-bottom: 1px solid red;
+}
+
+.form__input-error_active {
+  color: red;
+  font-size: 12px;
 }
 
 @media screen and (max-width: 568px) {
