--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -9,6 +9,10 @@
   padding: 34px 36px;
 }
 
+div.popup_avatar {
+  min-height: 272px;
+}
+
 @media screen and (max-width: 568px) {
   .popup__content {
     width: 100%;
