--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -7,6 +7,12 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  cursor: pointer;
+  position: relative;
+}
+
+.profile__image:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 740px) {
